Scatterplots & Heatmap zu Korrelationen erstellt

--- a/notebooks/flight_delay_analysis.ipynb
+++ b/notebooks/flight_delay_analysis.ipynb
@@ -763,6 +763,61 @@
     "- **Sehr schwacher Zusammenhang**:  \n",
     "  **Längere Flüge minimal häufiger verspätet – aber fast kein Effekt**.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.heatmap(korrelationen, annot=True, cmap='coolwarm', fmt=\".2f\")\n",
+    "\n",
+    "plt.title(\"Korrelationen: Verspätungen & Flugdauer\")\n",
+    "\n",
+    "# Speichern\n",
+    "plt.savefig(\"../visuals/korrelationen_heatmap.png\")\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.scatterplot(x='DEP_DELAY', y='ARR_DELAY', data=df_cleaned, alpha=0.3)\n",
+    "\n",
+    "plt.title(\"Abflugverspätung vs. Ankunftsverspätung\")\n",
+    "plt.xlabel(\"Abflugverspätung (Minuten)\")\n",
+    "plt.ylabel(\"Ankunftsverspätung (Minuten)\")\n",
+    "\n",
+    "# Speichern\n",
+    "plt.savefig(\"../visuals/scatter_abflug_ankunft.png\")\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8, 6))\n",
+    "sns.scatterplot(x='ELAPSED_TIME', y='ARR_DELAY', data=df_cleaned, alpha=0.3)\n",
+    "\n",
+    "plt.title(\"Flugdauer vs. Ankunftsverspätung\")\n",
+    "plt.xlabel(\"Flugdauer (Minuten)\")\n",
+    "plt.ylabel(\"Ankunftsverspätung (Minuten)\")\n",
+    "\n",
+    "# Speichern\n",
+    "plt.savefig(\"../visuals/scatter_flugdauer_ankunft.png\")\n",
+    "plt.close()\n"
+   ]
   }
  ],
  "metadata": {
